# overlay-from-live-content

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  technical_details.md
cmake/: FindVideoMaster.cmake  env.cmake
src/: CMakeLists.txt  allocation.cpp  allocation.hpp  device.cpp  device.hpp  helper.cpp  helper.hpp  main.cpp  processing.cpp  processing.hpp  rx_renderer.cpp  rx_renderer.hpp  rx_stream.cpp  rx_stream.hpp  shared_resources.cpp  shared_resources.hpp  signal_information.cpp  signal_information.hpp  stream.cpp  stream.hpp  tx_stream.cpp  tx_stream.hpp  version.h  version.h.in  version.hpp.in  windowed_renderer.cpp  windowed_renderer.hpp
src/api_helper/: api.cpp  api.hpp  api_success.hpp  enum_to_string.cpp  enum_to_string.hpp  handle_manager.cpp  handle_manager.hpp  resource_manager.hpp
